# goldilocks-api

./: .env.example  pyproject.toml
app/: main.py
app/routes/: chat.py  dft.py  fetch_structure.py  mlip.py  structure_match.py
app/services/: jarvis_cache.py  llm.py  prompt.py  tools.py
